update all tests